--- a/public/index.html
+++ b/public/index.html
@@ -6,12 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Expensify</title>
     <link rel="icon" type="image/png" href="/images/favicon.png" />
+    <linl rel="stylesheet" type="text/css" href="/styles.css" />
 </head>
 
 <body>
     <div id="app"></div>
-    <!-- <script src="https://unpkg.com/react@16.0.0/umd/react.development.js" crossorigin></script>
-    <script src="https://unpkg.com/react-dom@16.0.0/umd/react-dom.development.js" crossorigin></script> -->
     <script src="/bundle.js"></script>
 </body>
 
